--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -1,9 +1,9 @@
-taxi_co2:
+taxi_co2: 
   target: dev
   outputs:
     dev:
       type: duckdb
-      path: ''
+      path: '/Users/td/DS3022/ds3022-data-project-1/emissions.duckdb'
       schema: main
       threads: 4
       keepalives_idle: 0
