--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -12,6 +12,6 @@ macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
 models:
-  nyc_taxi_emissions:
-    staging:
+  taxi_co2:
+    transformation:
       +materialized: table
